tests/test_assets/semantics/arrays/pass/assignment.cog
values: i32[3];

values[0] = 1;
values[1] += 2;
values[2] *= 3;