tests/test_assets/semantics/arrays/fail/function_argument_type.cog
takes::(values: i32[3]) {
}

takes([1,true,3]);